# JustARatherVeryIntelligentSystem

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  JARVIS_TRAINING_README.md  Makefile  TRAINING_NOW_RUNNING.md  TRAINING_STATUS_UPDATE.md  TRAINING_SUCCESS.md  VOICE_FIXED.md  check_training_status.sh  docker-compose.dev.yml  docker-compose.yml  extract_imessage.py  jarvis_voice_trainer.py  monitor_training.sh  railway.json  run_jarvis_training.sh  skills-lock.json  wait_for_training.sh
backend/: CLAUDE.md  Dockerfile  alembic.ini  camera_daemon.py  entrypoint.sh  modal_jarvis_voice.py  modal_stark.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6d04365ad32b_initial_schema.py  a1b2c3d4e5f6_add_passkey_credentials.py  b2c3d4e5f6a7_add_contacts_table.py  c3d4e5f6a7b8_add_health_samples_table.py  d4e5f6a7b8c9_add_habits_tables.py  e5f6a7b8c9d0_add_focus_sessions.py  f6a7b8c9d0e1_add_landmarks_table.py  g7b8c9d0e1f2_add_location_history_table.py  h8c9d0e1f2g3_add_sessions_table.py  i9d0e1f2g3h4_add_composite_indexes.py  j0e1f2g3h4i5_add_session_token_hash.py  k1f2g3h4i5j6_add_encrypted_location_columns.py
backend/app/: config.py  main.py
backend/app/agents/: coordinator.py  executor.py  intent_router.py  orchestrator.py  planner.py  responder.py  retriever.py  security_tools.py  state.py  sub_agents.py  tool_schemas.py  tools.py
backend/app/core/: audit.py  dependencies.py  encryption.py  events.py  middleware.py  security.py
backend/app/db/: neo4j.py  postgres.py  qdrant.py  redis.py  session.py
backend/app/graphrag/: entity_extractor.py  graph_store.py  hybrid_retriever.py  vector_store.py
backend/app/integrations/: __init__.py  alpha_vantage.py  calendar.py  edamam.py  elevenlabs.py  flight_tracker.py  github_client.py  gmail.py  google_drive.py  google_maps.py  google_workspace.py  icloud_mail.py  jarvis_tts.py  llm_client.py  mac_mini.py  matter.py  mcp_client.py  news.py  perplexity.py  resend_email.py  scriptures.py  slack_client.py  sports.py  spotify.py  tts_fallback.py  twilio_client.py  vision.py  weather.py  web_search.py  whisper.py  wolfram.py
backend/app/models/: __init__.py  base.py  contact.py  conversation.py  focus_session.py  habit.py  health.py  knowledge.py  landmark.py  location_history.py  passkey.py  reminder.py  session.py  smart_home.py  user.py
backend/app/schemas/: auth.py  chat.py  common.py  data_import.py  knowledge.py  mcp.py  vision.py  voice.py
backend/app/services/: anticipatory.py  auth_service.py  camera.py  chat_service.py  continuous_learning.py  data_import_service.py  feynman_ingestion.py  foundational_research.py  health.py  heartbeat.py  internal_dialogue.py  kali_service.py  knowledge_service.py  maps_converter.py  mcp_discovery.py  mcp_service.py  research_daemon.py  self_heal.py  smart_directions.py  system_monitor.py  trend_detector.py  vision_service.py  voice_service.py  web_scraper.py  workshop_mode.py
backend/app/utils/: ntp_time.py
backend/knowledge/: connection-suite.md  iron-man-suits.md  owner-profile.md  spencer-profile.md
backend/scripts/: imcp_bridge.py  kali_setup.sh  mac_mini_agent.py
backend/static/: index.html
backend/static/assets/: JarvisCore-DtrEFH7B.js  JarvisCore-DtrEFH7B.js.map  ParticleField-CwcM2DFv.js  ParticleField-CwcM2DFv.js.map  index--PULFdFA.js  index--TXeLgp3.js  index--hDn8-HX.js  index--qS-QCAm.js  index-0Qi3VuGV.js  index-0yboTw82.js  index-0yoMT35k.css  index-1DsQ7iD7.js  index-28TBu_sj.js  index-28TBu_sj.js.map  index-5UP5CQB9.css  index-8auKG-VC.js  index-B4_6-q62.js  index-B52Q7eM6.css  index-B551z0DX.js  index-B7mmX_Wz.css  index-BBdey1_X.css  index-BBsmMYY-.js  index-BE4N5PMk.js  index-BEltHc6G.css  index-BIydetEd.js  index-BJAf2wNs.js  index-BKNPhlPx.css  index-BMafpmEb.css  index-BMd6rM7Q.css  index-BPhSPr5E.js  index-BSl_XEck.css  index-BTUcJu_W.css  index-BZ6Z-jVk.js  index-BZcyQSx-.css  index-BaMmcD2n.js  index-BeEMi1A5.css  index-Bg-bLfD0.js  index-Bg281BzV.css  index-Bi7mDFfL.js  index-BjiwkZeR.js  (+155 more)
cli/: README.md  jarvis_macbook_agent.py  pyproject.toml
cli/stark_jarvis/: __init__.py  __main__.py  auth.py  chat.py  config.py  display.py  input_ui.py  main.py  oneshot.py
(+194 files in other folders)
