[tool.poetry]
name = "jarvis-backend"
version = "0.1.0"
description = "J.A.R.V.I.S. — Just A Rather Very Intelligent System (Backend)"
authors = ["Stark Industries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
python-multipart = "^0.0.9"

# Database — PostgreSQL (async)
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Cache — Redis
redis = { version = "^5.0.4", extras = ["hiredis"] }

# Graph DB — Neo4j
neo4j = "^5.20.0"

# Vector DB — Qdrant
qdrant-client = "^1.9.1"

# Validation & settings
pydantic = "^2.7.1"
pydantic-settings = "^2.3.0"

# Auth & security
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
cryptography = "^42.0.7"

# AI / LLM
openai = "^1.30.0"              # SDK used by Perplexity, GLM, Stark Protocol (OpenAI-compatible APIs)
langchain = "^0.2.1"
langgraph = "^0.0.55"

# HTTP client
httpx = "^0.27.0"

# Utilities
python-dotenv = "^1.0.1"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"
ruff = "^0.4.5"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
