[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malibupoint"
version = "0.2.0"
description = "J.A.R.V.I.S. Terminal Client — Stark Secure Server access from any terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stark Industries"},
]
keywords = ["jarvis", "ai", "assistant", "cli", "terminal", "stark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.25.0",
    "cryptography>=41.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
jarvis = "stark_jarvis.main:main"

[project.urls]
Homepage = "https://github.com/carterhamm/JustARatherVeryIntelligentSystem"

[tool.setuptools.packages.find]
include = ["stark_jarvis*"]
